@@ -1,34 +1,3 @@
-- display of optional params should show default value
-
-  also display possible enum values?
-
-  min and max for int/float params?
-
-  maybe:
-
-$ vips embed
-embed an image in a larger image
-usage:
-   embed in out x y width height
-where:
-   in           - Input image, input VipsImage
-   out          - Output image, output VipsImage
-   x            - Left edge of input in output, input gint
-   			(default: 0, min: -inf, max: inf)
-   y            - Top edge of input in output, input gint
-   			(default: 0, min: -inf, max: inf)
-   width        - Image width in pixels, input gint
-   			(default: 100, min: 0, max: inf)
-   height       - Image height in pixels, input gint
-   			(default: 100, min: 0, max: inf)
-optional arguments:
-   extend       - How to generate the extra pixels, input VipsExtend
-   			(default: black, allowed: copy, extend, mirror)
-   background   - Colour for background pixels, input VipsArrayDouble
-   			(default: 0, min: 0, max: inf)
-operation flags: sequential-unbuffered 
-
-
 - use vips_resize() in vipsthumbnail?
 
   should the sharpening filter be selectable?
